ECMS-5243 Broken UI/Func of Edit Portlet - Contact Us: - Remove selectbox repository - Fix UI of select path broken

--- a/apps/portlet-explorer/src/main/webapp/skin/less/ecms-explorer.less
+++ b/apps/portlet-explorer/src/main/webapp/skin/less/ecms-explorer.less
@@ -877,18 +877,6 @@
 	}
 }
 
-/******** UIRelationManager **************/
-.uiOneNodePathSelector {
-	.breadcrumb {
-		background: #f7f7f7;
-		border: 1px solid #e1e1e1;
-		padding: 5px 10px;
-		margin-bottom: 20px;
-		line-height: 16px;
-		.border-radius(0px);
-	}
-}
-
 /******** UIOneTaxonomySelector **************/
 .uiOneTaxonomySelector {
 	.breadcrumb {
@@ -899,11 +887,6 @@
     border: 1px solid #CFCFCF;
 	}
 }
-
-.uiTreeList {
-	margin-left: 250px;
-}
-
 
 /******** UIAddFolder **************/
 .uiAddFolder {
