--- a/apps/resources-wcm/src/main/webapp/skin/less/ecms-resources-wcmskin.less
+++ b/apps/resources-wcm/src/main/webapp/skin/less/ecms-resources-wcmskin.less
@@ -351,6 +351,18 @@
 
 /*############################## -- End UIThumbnailsView -- ##############################*/
 
+/******** UIRelationManager **************/
+.uiOneNodePathSelector {
+	.breadcrumb {
+		background: #f7f7f7;
+		border: 1px solid #e1e1e1;
+		padding: 5px 10px;
+		margin-bottom: 20px;
+		line-height: 16px;
+		.border-radius(0px);
+	}
+}
+
 .uiGroupSelector, .uiGroupMembershipSelector, .uiMemberSelector{
 	.form-horizontal{
 		padding: 0px;
@@ -371,3 +383,8 @@
 .uiPopup .popupContent .uiMemberSelector{
 	margin: -10px -10px 10px -10px;
 }
+
+.uiTreeList {
+	margin-left: 250px;
+}
+
